--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -27,6 +27,211 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="78" data-price="5.72">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J5KNv5"><img src="https://m.media-amazon.com/images/I/716y1yWqUGL._SR400,400_.jpg" alt="Cell Phone Stand" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>200 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>78% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2J5KNv5">Cell Phone Stand, Barsone Aluminium Phone Holder Mount Stand for Phones and Tablets 10 inches (Updated Silver)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.72</span><span class="ori_price">$25.98</span></address>
+      <p><span>Take <strong>78% off at $25.98</strong> with promo code: <strong>78S9ICEX</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 02, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2J5KNv5">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="42.51">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J63AX5"><img src="https://m.media-amazon.com/images/I/814EdH6bsKL._SR400,400_.jpg" alt="TheFitLife Flexible Metal Garden Hose" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>167 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2J63AX5">TheFitLife Flexible Metal Garden Hose - 25/50/75/100 FT 304 Stainless Steel Water Hose with Newest Spray Nozzle and Solid Metal Fittings,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$42.51</span><span class="ori_price">$56.68</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>25% off at $56.68</strong> with promo code: <strong>25WYMOWQ</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 09, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2J63AX5">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="13.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/321M9yl"><img src="https://m.media-amazon.com/images/I/61ehJDJ6ixL._SR400,400_.jpg" alt="FRACORA Womens Sneakers" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>175 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/321M9yl">FRACORA Womens Sneakers Low Top Lace Ups Canvas Shoes Fashion Comfortable</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.99</span><span class="ori_price">$19.99</span></address>
+      <p><span>Take <strong>30% off at $19.99</strong> with promo code: <strong>30FFKDE9</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 15, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/321M9yl">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="27.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XiX5ZM"><img src="https://m.media-amazon.com/images/I/71NYbP7Z2tL._SR400,400_.jpg" alt="Growom One Step Hot Air Brush" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>23 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XiX5ZM">Growom One Step Hot Air Brush, Hair Dryer, Straightener, Curler, Hair Styler, Designer and Volumizer,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$27.99</span><span class="ori_price">$34.99</span></address>
+      <p><span>Take <strong>20% off at $34.99</strong> with promo code: <strong>20KET6PB</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 07, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XiX5ZM">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="13.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/3253Ehb"><img src="https://m.media-amazon.com/images/I/61EZ+TmlXJL._SR400,400_.jpg" alt="Control Future Portable USB Fan" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>7 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/3253Ehb">Control Future Portable USB Fan - Hand Free Personal Neckband Fan, Rechargeable Battery Operated Fan...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.59</span><span class="ori_price">$16.99</span></address>
+      <p><span>Take <strong>20% off at $16.99</strong> with promo code: <strong>20YY7QN5</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 02, 2019 at 06:00 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/3253Ehb">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="13.58">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J5Jts1"><img src="https://m.media-amazon.com/images/I/71Yq8khKxqL._SR400,400_.jpg" alt="OICEPACK Ice Pack" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>90 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2J5Jts1">OICEPACK Ice Pack for Lunch Box - Blue - Reusable Freezer Ice Packs for Coolers - Slim Long - Lasting Cool Pack...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.58</span><span class="ori_price">$16.98</span></address>
+      <p><span>Take <strong>20% off at $16.98</strong> with promo code: <strong>20IN12N9</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 06, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2J5Jts1">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="20.40">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Jjt6XY"><img src="https://m.media-amazon.com/images/I/51JiDpDS7IL._SR400,400_.jpg" alt="Frudaca M9566 RC Drone" /></a>
+    <div class="rating"><p>0 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Jjt6XY">Frudaca M9566 RC Drone 6-Axis Gyro G-Sensor Mobile APP Remote Control 720P 2MP HD Wifi Camera...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.40</span><span class="ori_price">$50.99</span></address>
+      <p><span>Take <strong>60% off at $50.99</strong> with promo code: <strong>60TLPWEU</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 07, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Jjt6XY">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="22.19">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2NCHEHg"><img src="https://m.media-amazon.com/images/I/41JZuQoo5uL._SR400,400_.jpg" alt="MICHELANGELO 2 Piece Granite Non-Stick Fry Pan" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>15 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2NCHEHg">MICHELANGELO 2 Piece Granite Non-Stick Fry Pan Set, Marble Skillet Set with Wooden Looking Handles,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$22.19</span><span class="ori_price">$36.99</span></address>
+      <p><span>Take <strong>40% off at $36.99</strong> with promo code: <strong>402W8OPW</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 02, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2NCHEHg">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="24.78">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J5gzbG"><img src="https://m.media-amazon.com/images/I/71lNLCSZUfL._SR400,400_.jpg" alt="Jardineer Garden Tools Set" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>45 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2J5gzbG">Jardineer Garden Tools Set, 8 PCS Gardening Kit with Gardening Bags, Aluminum Handheld Tools, Gardening Gifts for Woman and Man</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$24.78</span><span class="ori_price">$30.97</span>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>20% off at $30.97</strong> with promo code: <strong>20DR9MIH</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 02, 2019 at 12:00 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2J5gzbG">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="18.60">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Xi6XOw"><img src="https://m.media-amazon.com/images/I/61uj+BCXsbL._SR400,400_.jpg" alt="ZenRich New iPad Pro 11 Case" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>28 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Xi6XOw">ZenRich New iPad Pro 11 Case,360 Degree Rotating Kickstand Dropproof Handstrap Shockproof Heavy Duty...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.60</span><span class="ori_price">$21.88</span></address>
+      <p><span>Take <strong>15% off at $21.88</strong> with promo code: <strong>15BEU1PA</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xi6XOw">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="50" data-price="14.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2xrdxaV"><img src="https://m.media-amazon.com/images/I/61t4J1pXamL._SR400,400_.jpg" alt="Multi Port USB Charger" /></a>
