--- a/app/views/deals/_body_promotions.html.erb
+++ b/app/views/deals/_body_promotions.html.erb
@@ -9,7 +9,16 @@
 </div>
  -->
 
- <!-- Categories : coupons, sales, promotions -->
+ <!-- Categories : coupons, sales, promotions, brands -->
+
+<div class="filter-node promotion_box" data-filter='["promotions","Prime Day July 15 & 16 - A Two-Day Parade of Epic Deals"]'>
+  <a target="_blank" href="https://amzn.to/2XOip8O"><img src="https://images-na.ssl-images-amazon.com/images/G/01/Events/2019/01112499/luigilu/us_bear_pdp_dt_hero_1500x375_a_en.jpg" alt="Prime Day"></a>
+  <div class="node-box inner">
+    <h2><a target="_blank" href="https://amzn.to/2XOip8O">Prime Day July 15 & 16 - A Two-Day Parade of Epic Deals</a></h2>
+    <span>End Date: Jul. 16th. 2019</span>
+  </div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/2XOip8O">Discover More</a></div>
+</div>
 
  <div class="filter-node promotion_box" data-filter='["sales","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://live.staticflickr.com/7297/27443174192_885278e512_b.jpg" alt="Gold Box Deals"></a>
@@ -37,6 +46,14 @@
     <p>Save up to 60% off on clothing, shoes, jewelry, watches, and more.</p>
   </div>
   <div class="btn"><a target="_blank" href="https://amzn.to/2Xgag9b">Discover More</a></div>
+</div>
+
+<div class="filter-node promotion_box" data-filter='["brands","Save up to 24% OFF on Apple's iPad (All models)"]'>
+  <a target="_blank" href="https://amzn.to/2J4FSuq"><img src="https://images.unsplash.com/photo-1471279136892-55af5dc6895f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="apple ipad deals"></a>
+  <div class="node-box inner">
+    <h2><a target="_blank" href="https://amzn.to/2J4FSuq">Save up to 24% OFF on Apple's iPad (All models)</a></h2>
+  </div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/2J4FSuq">Discover More</a></div>
 </div>
 
 <div class="filter-node promotion_box" data-filter='["sales","Up to 50% off Great deals on like-new products on Amazon Renewed"]'>
@@ -124,6 +141,15 @@
   </div>
   <div class="btn"><a target="_blank" href="https://amzn.to/2JdsP8R">Discover More</a></div>
 </div>
+
+<div class="filter-node promotion_box" data-filter='["sales","Up To 30% Off Beauty, Health, & Personal Care"]'>
+  <div class="node-box inner">
+    <h2><a target="_blank" href="https://amzn.to/308m1Ag">Up To 30% Off Beauty, Health, & Personal Care</a></h2>
+    <p>Beauty products of Amazon.com features a browsable selection of everything on your favorite skin care, hair care, makeup tools and accessories, perfume and cologne, and loads of top brands like Olay, L’Oreal Paris, Covergirl, Pantene, Vidal Sassoon, Suave, Dove, Maybelline, Garnier, The Body Shop, Nivea, Eucerin, and many, many more.</p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/308m1Ag">Discover More</a></div>
+</div>
+
 
 
 
