--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -31,10 +31,10 @@
                   <li>Enter your promotional code into the box of "Gift cards & promotional codes"</li>
                   <!-- <li>Proceed with payment then the code is automatically applied.</li> -->
                   <li class="about_db_dis">
-                    <p>What is "Double Discount"?</p>
-                    <span class="dou_red">Double Discount</span>
+                    <p>What is "Extra Discount"?</p>
+                    <span class="dou_red">Extra Discount</span>
                     <em>You can get extra discount by applying promotional code to the product that is being discounting.</em>
-                    <span class="dou_green">Double Discount</span>
+                    <span class="dou_green">Extra Discount</span>
                     <em>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</em>
                   </li>
                 </ul>
@@ -67,7 +67,7 @@
         </div><!--./lt_cnt-->
         
         <div class="rt_cnt">
-          <h2>Promotion Codes We've Picked On Amazon Jul. 02. 2019.</h2>
+          <h2>Promotion Codes We've Picked On Amazon Jul. 03. 2019.</h2>
           
           <div class="sort_box clearfix">
             <ul>
@@ -103,7 +103,7 @@
  -->
             <%= render 'deals/body_promocode' %>
           </div>
-          <p class="updating">Promotional codes are still updating... :D <a href="/promocodes_days/day_03">GO TO PROMO CODES OF YESTERDAY</a></h2>
+          <p class="updating">Promotional codes are still updating... :D <a href="/promocodes_days/day_04">GO TO PROMO CODES OF YESTERDAY</a></h2>
           
         </div><!--./rt_cnt-->    
 
