--- a/app/assets/stylesheets/blog.css.erb
+++ b/app/assets/stylesheets/blog.css.erb
@@ -1,2 +1,10 @@
 /*blog_03*/
 .memorial ul li a{text-transform:uppercase;}
+
+/*blog_04*/
+.fourthjuly{}
+.fourthjuly ul{margin-top:30px;}
+.fourthjuly ul li{border-bottom:1px solid #ccc;padding-bottom:7px;margin-bottom:7px;}
+.fourthjuly ul li a{font-size:20px;}
+.fourthjuly ul li a p{color:#616161;font-size:15px;text-transform:none;}
+.fourth_title{margin-bottom:-60px;display:block;}
