--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -26,6 +26,271 @@
 
  <p>run out of stock soon</p>
 -->
+<div class="card clearfix" data-score="30" data-price="9.09">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LAMD8W"><img src="https://m.media-amazon.com/images/I/81+uJXCZ-YL._SR400,400_.jpg" alt="ProCase Galaxy Tab S5e..." /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>20 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LAMD8W">ProCase Galaxy Tab S5e 10.5 2019 T720 T725 Case, Slim Light Cover Stand Hard Shell Folio Case for 10.5 Inch Galaxy Tab S5e Tablet...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.09</span><span class="ori_price">$12.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>30% off at $12.99</strong> with promo code: <strong>30WNRAOG</strong></span></p>
+      <span class="ex_date">Expiration Date : Aug 01, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LAMD8W">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="39.18">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Jsd3a6"><img src="https://m.media-amazon.com/images/I/71OesWXDgiL._SR400,400_.jpg" alt="JADEMALL Keyboard Case" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>46 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Jsd3a6">JADEMALL Keyboard Case for iPad Pro 12.9 Inch 2018(3rd Gen), Detachable Wireless Smart Keyboard Stand Folio Cover,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$39.18</span><span class="ori_price">$48.98</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>20% off at $48.98</strong> with promo code: <strong>201IHVVL</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 03, 2019 at 12:00 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Jsd3a6">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="10.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XnEOpc"><img src="https://m.media-amazon.com/images/I/61xaFsgHI5L._SR400,400_.jpg" alt="Active Stylus Pen" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>1 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XnEOpc">Active Stylus Pen for Touch Screen, G-TING Digital Pen Compatible for iPad iPhone &Tablets, Smart Digital Pencil...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.99</span><span class="ori_price">$21.99</span></address>
+      <p><span>Take <strong>50% off at $21.99</strong> with promo code: <strong>503BJICQ</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 10, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XnEOpc">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="30,.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Yv1YeV"><img src="https://m.media-amazon.com/images/I/51HmOM+PQtL._SR400,400_.jpg" alt="GRC Bluetooth Wireless Earbuds" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>15 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Yv1YeV">GRC Bluetooth Wireless Earbuds 5.0 Headphones, 18H Playtime Stereo Deep Bass w/Mic, Sport Wireless Touch Control Earbuds with Charging Case...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$30,.00</span><span class="ori_price">$59.99</span>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <p><span>Take <strong>50% off at $59.99</strong> with promo code: <strong>50C9L6KN</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 24, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Yv1YeV">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="35.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30fo0CZ"><img src="https://m.media-amazon.com/images/I/71K7KKghd4L._SR400,400_.jpg" alt="ZOVER Battery Case for iPhone Xs/X" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>62 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>10% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30fo0CZ">ZOVER Battery Case for iPhone Xs/X, Portable Charger 4000mAh Travel Slim High-Speed Dual USB Type-C Power Bank,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$35.99</span><span class="ori_price">$39.99</span></address>
+      <p><span>Take <strong>10% off at $39.99</strong> with promo code: <strong>10BK962O</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 10, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/30fo0CZ">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="77" data-price="4.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xz6mxn"><img src="https://m.media-amazon.com/images/I/41Vzi5wb2IL._SR400,400_.jpg" alt="Face & Neck Firming Cream" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>119 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>77% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xz6mxn">Face & Neck Firming Cream - Top Influencer - Organic & Vegan - Helps With Anti-Wrinkle & Firming Skin Packed with...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$4.50</span><span class="ori_price">$19.57</span></address>
+      <p><span>Take <strong>77% off at $19.57</strong> with promo code: <strong>77NBIZHI</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 19, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2xz6mxn">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="77" data-price="4.57">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XHFCK1"><img src="https://m.media-amazon.com/images/I/61CrusygM+L._SR400,400_.jpg" alt="18 Super Pigmented" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>2,477 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>77% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XHFCK1">18 Super Pigmented - Top Influencer Professional Eyeshadow Palette all finishes, 5 Matte + 9 Shimmer + 4 Duochrome - Buttery Soft...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$4.57</span><span class="ori_price">$19.87</span></address>
+      <p><span>Take <strong>77% off at $19.87</strong> with promo code: <strong>77NBIZHI</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 19, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XHFCK1">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="13.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2RRcD0Q"><img src="https://m.media-amazon.com/images/I/81hmxa+GZTL._SR400,400_.jpg" alt="Belilent Sneakers" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>201 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2RRcD0Q">Belilent Sneakers Women Men Breathable Walking Shoes Women Fashion Slip on Work Nursing Workout Casual Gym Shoes for Outdoor Indoor Travel Sport</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.49</span><span class="ori_price">$26.99</span></address>
+      <p><span>Take <strong>50% off at $26.99</strong> with promo code: <strong>50AMAZONSF07</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 20, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2RRcD0Q">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="20.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JakFPP"><img src="https://m.media-amazon.com/images/I/91ElbW95LML._SR400,400_.jpg" alt="StorageWorks Closet Bins" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>256 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JakFPP">StorageWorks Closet Bins for Shelves, Closet Baskets with Cotton Rope Handles, Mixing of Gray, Brown & Beige, 3-Pack, Jumbo</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.39</span><span class="ori_price">$33.99</span></address>
+      <p><span>Take <strong>40% off at $33.99</strong> with promo code: <strong>40E52P6F</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 26, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JakFPP">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="18.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Xp2jye"><img src="https://m.media-amazon.com/images/I/81LgwKDytwL._SR400,400_.jpg" alt="Premium Digestive Enzyme Supplement" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>48 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Xp2jye">MassZymes - Premium Digestive Enzyme Supplement for Women and Men - Most Potent Enzyme Formula on The Planet - Now with AstraZyme (120 Capsules) </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.98</span><span class="ori_price">$39.95</span></address>
+      <p><span>Take <strong>50% off at $39.95</strong> with promo code: <strong>50OFFAMAZON</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 27, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xp2jye">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="12.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LBoUFt"><img src="https://m.media-amazon.com/images/I/61PAkdHvcPL._SR400,400_.jpg" alt="GRANDIX 3 in One Charging Dock" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>16 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LBoUFt">GRANDIX 3 in One Charging Dock for Apple Series Charger Docks Station for Airpods iWatch iPhone Android Smartphone Ipad Tablet NightStand Aluminum Holder</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.50</span><span class="ori_price">$25.00</span></address>
+      <p><span>Take <strong>50% off at $25.00</strong> with promo code: <strong>503MZ6DL</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 14, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LBoUFt">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="20.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XijsJX"><img src="https://m.media-amazon.com/images/I/51gaTXbdorL._SR400,400_.jpg" alt="2 Slice Toaster" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>37 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XijsJX">2 Slice Toaster, CUSIBOX Extra Wide Slots Stainless Steel Toaster with 7 Bread Browning Settings, REHEAT/DEFROST/CANCEL Function, 750W</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.99</span><span class="ori_price">$34.99</span></address>
+      <p><span>Take <strong>40% off at $34.99</strong> with promo code: <strong>40ST013MF</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 05, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XijsJX">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="11.87">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Lw6vtX"><img src="https://m.media-amazon.com/images/I/51+tnk5cR8L._SR400,400_.jpg" alt="RAOYI LED Desk Lamp" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>132 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Lw6vtX">RAOYI LED Desk Lamp Eye-Caring Table Lamps, Dimmable Office Lamp with USB Charging Port, Touch Control Sensitive, 5 Color Modes, Black, 12W</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.87</span><span class="ori_price">$19.79</span></address>
+      <p><span>Take <strong>40% off at $19.79</strong> with promo code: <strong>40ABYFXH</strong></span></p>
+      <span class="ex_date">Expiration Date : Aug 01, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Lw6vtX">Use Code at Amazon</a></div>
+</div>
 
 <div class="card clearfix" data-score="35" data-price="19.49">
   <div class="image_box">
