--- a/app/views/blogs/blog_02.html.erb
+++ b/app/views/blogs/blog_02.html.erb
@@ -1,5 +1,5 @@
 <div class="layout"><!--layout-->
-  <%= render 'shared/header' %>
+  <%= render 'shared/header_short' %>
   <div class="blogs clearfix">
     <div class="wrap">
 
